Agregar dinamismo e interactividad al sitio. - Programar funcionalidades al formulario: Agregar y Despejar. - Consumir API (fakestoreAPI) para renderizar productos dinamicamente. - Programar funcionalidad para remover productos.

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ main{
     background-color: #292929;
     border: none;
     cursor: pointer;
-    width: 200px;
+    width: 99%;
     display: flex;
     justify-content: center;
     border-radius: 2px;
